<resources>
    <string name="app_name">Car Terminal</string>

    <!-- Dialog Spinner -->
    <string name="buttonLabelSelect">Select</string>
    <string name="buttonLabelDimiss">Dismiss</string>
    <string-array name="methodList">
        <item>Choose One ...</item>
        <item>Scan UHF</item>
        <item>Input NIK</item>
    </string-array>

    <!-- General -->
    <string name="logo_description">Logo Car Terminal</string>

    <!-- Sign In Properties -->
    <string name="sign_in">Sign In</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="setting_label">Setting</string>
    <string name="sign_in_btn_label">Sign In</string>
    <string name="forgot_password">LUPA PASSWORD ?</string>
    <string name="pelindoiv">PELINDO IV</string>
    <string name="car_terminal">CAR TERMINAL SYSTEM</string>
    <string name="forgotPasswordMessage">Contact your administrator.</string>
    <string name="forgotPasswordTitle">Forgot Password</string>

    <!-- Setting Properties -->
    <string name="setting">Setting</string>
    <string name="ip_address_label">Host/IP Address</string>
    <string name="save_btn_label">SIMPAN</string>
    <string name="testConnection">CONNECT</string>

    <!-- Home Properties -->
    <string name="home">Home</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name_company">PELINDO IV CAR TERMINAL</string>
    <string name="fullName">Full Name</string>
    <string name="do_service">Urus Pelayanan</string>
    <string name="check_vehicle">Cek Kendaraan</string>
    <string name="change_manifest">Pindah Manifest</string>
    <string name="change_tag_vehicle">Ganti Tag</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Search Manifest -->
    <string name="searchManifest">Cari Manifest</string>
    <string name="providedServiceNumberLabel">CARI MANIFEST</string>
    <string name="btnConfirm">KONFIRMASI</string>
    <string name="providedServiceNumber">Nomor Layanan : </string>
    <string name="vesselName">Nama Kapal : </string>
    <string name="carTerminalSystem">CAR TERMINAL SYSTEM</string>

    <!-- Detail Manifest -->
    <string name="providedServiceNumberDetailManifestLabel">Nomor Layanan</string>
    <string name="vesselNameDetailManifestLabel">Nama Kapal</string>
    <string name="vesselOwnerDetailManifestLabel">Pemilik Kapal</string>
    <string name="companyNameDetailManifestLabel">Nama Perusahaan</string>
    <string name="buttonBackToSearchManifest">KEMBALI</string>

    <!-- Scan Vehicle -->
    <string name="labelScanVehicle">Scanning RFID Tag ...</string>

    <!-- Search Vehicle -->
    <string name="inputNIKLabel">Input NIK</string>
    <string name="btnConfirmVehicle">KONFIRMASI</string>
    <string name="btnBackToDetailManifest">KEMBALI</string>
    <string name="vehicleNIK">NIK : </string>
    <string name="vehicleDescription">Deskripsi : </string>
    <string name="vehicleProvidedServiceNumber">Nomor Layanan : </string>

    <!-- Detail Vehicle -->
    <string name="vehicleNIKLabel">NIK</string>
    <string name="vehicleDescriptionLabel">Deskripsi</string>
    <string name="vehicleClassLabel">Golongan</string>
    <string name="vehicleNIKValue">NIK Kendaraan</string>
    <string name="vehicleDescriptionValue">Deskripsi Kendaraan</string>
    <string name="vehicleClassValue">Golongan Kendaraan</string>
    <string name="vehicleEditDataVehicle">Edit</string>

    <!-- Check Vehicle -->
    <string name="checkVehicleEntryDateLabel">Tanggal Masuk</string>
    <string name="checkVehicleProductionDayLabel">Hari Penumpukan</string>
    <string name="checkVehicleEntryDateValue">-</string>
    <string name="checkVehicleProductionDayValue">-</string>
    <string name="checkVehicleNIKValue">-</string>
    <string name="checkVehicleDescriptionValue">-</string>
    <string name="checkVehicleClassValue">-</string>

    <!-- Change UHF Tag -->
    <string name="changeUHFTagInputNIK">Input NIK yang Ingin Diganti :</string>

    <!-- Add New Vehicle Menu -->
    <string name="addNewVehicle">Tambah Kendaraan</string>
    <string name="addNewVehicleInputNIKLabel">Input NIK Kendaraan Baru :</string>
    <string name="addNewVehicleDescriptionLabel">Detail Kendaraan :</string>
    <string name="addNewVehicleClass">Golongan Kendaraan :</string>
    <string name="warningInput1">Anda sedang menginput kendaraan</string>
    <string name="warningInput2">Tambahan yang tidak ada dalam manifest</string>

    <!-- Detail Change Manifest -->
    <string name="detailChangeManifestPreviousManifestNumberLabel">Nomor Manifest Sekarang</string>
    <string name="detailChangeManifestCurrentManifestNumberLabel">Nomor Manifest Pengganti</string>
    <string name="detailChangeManifestPreviousManifestNumberValue">-</string>
    <string name="detailChangeManifestCurrentManifestNumberValue">-</string>
</resources>
