<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_background"
    tools:context=".activity.DetailManifestActivity">

    <include
        android:id="@+id/toolbarDetailChangeManifest"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/manifest_innerbox">

        <RelativeLayout
            android:id="@+id/relay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/vehicleNIKLabel"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDetailChangeManifestVehicleNIK"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/checkVehicleNIKValue"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/vehicleDescriptionLabel"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDetailChangeManifestVehicleDescription"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/checkVehicleDescriptionValue"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/vehicleClassLabel"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDetailChangeManifestVehicleClass"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/checkVehicleClassValue"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/detailChangeManifestPreviousManifestNumberLabel"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDetailChangeManifestPreviousManifest"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/detailChangeManifestPreviousManifestNumberValue"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/detailChangeManifestCurrentManifestNumberLabel"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/txtDetailChangeManifestCurrentManifest"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:text="@string/detailChangeManifestCurrentManifestNumberValue"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                    </TableRow>

                </TableLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp">

                    <Button
                        android:id="@+id/btnDetailChangeManifestBack"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button_manifest_kembali"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginLeft="20dp"
                        android:text="@string/buttonBackToSearchManifest"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnDetailChangeManifestConfirm"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_manifest_konfirmasi"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/btnConfirm"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carTerminalSystem"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"/>

</RelativeLayout>