<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_background"
    tools:context=".activity.HomeActivity">

    <include
        android:id="@+id/toolbarSearchManifest"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:paddingTop="40dp">

        <RelativeLayout
            android:id="@+id/relay1"
            android:layout_width="wrap_content"
            android:layout_height="600dp"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/imgView_logo">

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fullName"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/linearLayer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/btnDoService"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/linearLayer1"
                android:gravity="right|center_vertical"
                android:paddingRight="25dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_home_urus_pelayaran"
                android:fontFamily="sans-serif-medium"
                android:minWidth="100dp"
                android:text="@string/do_service"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnCheckVehicle"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btnDoService"
                android:gravity="right|center_vertical"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_home_cek_kendaraan"
                android:fontFamily="sans-serif-medium"
                android:minWidth="100dp"
                android:text="@string/check_vehicle"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnChangeManifest"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btnCheckVehicle"
                android:gravity="right|center_vertical"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_pindah_manifest"
                android:fontFamily="sans-serif-medium"
                android:minWidth="100dp"
                android:text="@string/change_manifest"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnChangeTag"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btnChangeManifest"
                android:gravity="right|center_vertical"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_ganti_tag"
                android:fontFamily="sans-serif-medium"
                android:minWidth="100dp"
                android:text="@string/change_tag_vehicle"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btnChangeTag"
                android:gravity="right|center_vertical"
                android:paddingRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_logout"
                android:fontFamily="sans-serif-medium"
                android:minWidth="100dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_pelindoiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_company"
        android:textColor="@color/colorAccent"
        android:textSize="14dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>