<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/login_background"
    tools:context=".activity.DetailManifestActivity">

    <include
        android:id="@+id/toolbarDetailVehicle"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginRight="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/manifest_innerbox">

        <RelativeLayout
            android:id="@+id/relay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleNIKLabel"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtVehicleDetailNIK"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleClassValue"
                            android:textColor="@color/black"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkboxVehicleNIK"
                            android:textColor="@color/backToolbar"
                            android:textCursorDrawable="@null"
                            android:buttonTint="@color/black"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleDescriptionLabel"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtVehicleDetailDescription"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleDescriptionValue"
                            android:textColor="@color/black"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkboxVehicleDescription"
                            android:textColor="@color/backToolbar"
                            android:textCursorDrawable="@null"
                            android:buttonTint="@color/black"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleClassLabel"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txtVehicleDetailClass"
                            android:layout_width="65dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:text="@string/vehicleClassValue"
                            android:textColor="@color/black"
                            android:ellipsize="none"
                            android:singleLine="false"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkboxVehicleDetailClass"
                            android:textColor="@color/backToolbar"
                            android:textCursorDrawable="@null"
                            android:buttonTint="@color/black"/>
                    </TableRow>

                </TableLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp">

                    <Button
                        android:id="@+id/btnBackToSearchVehicle"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button_manifest_kembali"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginLeft="20dp"
                        android:text="@string/buttonBackToSearchManifest"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnConfirmDetailVehicle"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_manifest_konfirmasi"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/btnConfirm"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <!-- android:layout_alignParentBottom="true" -->
                    <Button
                        android:id="@+id/btnEdit"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button_manifest_konfirmasi"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/vehicleEditDataVehicle"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>